--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta content="width=device-width, initial-scale=1" name="viewport">
 
         <link href="css/normalize.css" rel="stylesheet">
-        <link href="css/index.css" rel="stylesheet">
+        <link href="css/lottie/loading.css" rel="stylesheet">
     </head>
 
     <body>
@@ -19,6 +19,6 @@
                 crossorigin="anonymous"
                 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
                 src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script defer src="js/index.js"></script>
+        <script defer src="js/lottie/loading.js"></script>
     </body>
 </html>
