--- a/html/login.html
+++ b/html/login.html
@@ -17,8 +17,8 @@
         <img alt="background-image" id="img-background" src="../asset/img/b-1.jpg" />
 
         <script async src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-        <script defer
-                crossorigin="anonymous"
+        <script crossorigin="anonymous"
+                defer
                 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
                 src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script defer src="../js/lottie/loading.js"></script>
