--- a/html/login.html
+++ b/html/login.html
@@ -29,11 +29,11 @@
 
     <body>
         <lottie-player autoplay
+                       id="lp-loading"
                        loop
                        mode="bounce"
                        speed="0.75"
-                       src="../asset/lottie/loading-morandi-50.json"
-                       id="lp-loading"></lottie-player>
+                       src="../asset/lottie/loading-morandi-50.json"></lottie-player>
         <img alt="background-image" id="img-background" src="../asset/img/b-1.jpg" />
 
         <div class="wrap-center-vertical" id="d-login">
