--- a/html/login.html
+++ b/html/login.html
@@ -59,7 +59,7 @@
             </form>
         </div>
 
-        <script async src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
         <script crossorigin="anonymous"
                 defer
                 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -73,6 +73,8 @@
                 integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+        <script defer src="../js/lottie/loading.js"></script>
+        <script defer src="../js/bycrpt/bycrpt.js"></script>
         <script defer src="../js/login.js"></script>
     </body>
 </html>
