Add custom code template to CSS, JS.

--- a/html/signup.html
+++ b/html/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Login</title>
+        <title>SignUp</title>
 
         <meta content="ID ASG II" name="description">
         <meta content="width=device-width, initial-scale=1" name="viewport">
