--- a/html/login.html
+++ b/html/login.html
@@ -85,6 +85,7 @@
         <script defer src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
         <script defer src="../js/lottie/loading.js"></script>
         <script defer src="../js/bycrpt/bycrpt.js"></script>
+        <script defer src="../js/lottie/button-click.js"></script>
         <script defer src="../js/login.js"></script>
     </body>
 </html>
