Updated mainpage HTML CSS (Added logo)

--- a/html/mainpage.html
+++ b/html/mainpage.html
@@ -11,13 +11,17 @@
     <link href="../css/mainpage.css" rel="stylesheet">
 </head>
 <body>
-    <!-----Hamburger Menu------>
+    <!-----Main Page Header------>
     <header>
         <div class="hamburger-menu-btn">
             <div class="hamburger-menu"></div>
         </div>
+
+        <div class="logo-img">
+            <img src="../asset/img/mikasa.png" alt="placeholder" style="width:128px;height:128px;">
+        </div>
+
         <div class="hamburger-menu-wrapper">
-            
             <ul class="hamburger-menu-list">
                 <li class="hamburger-menu-element"><a href="#" class="hamburger-menu-link">Characters</a></li>
                 <li class="hamburger-menu-element"><a href="#" class="hamburger-menu-link">Profile</a></li>
