--- a/html/signup.html
+++ b/html/signup.html
@@ -83,6 +83,7 @@
                                 <label for="tb-email">Email: </label>
                                 <input class="form-control" id="tb-email" placeholder="Email" type="email" />
                             </div>
+                            <small class="s-error-hint" id="fc-signup-s-email-req">Email doesn't meet the regex</small>
                             <small class="s-error-hint" id="fc-signup-s-email-err">Email already taken!</small>
                         </div>
                         <div class="wrap-center-vertical">
@@ -134,9 +135,10 @@
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
         <script defer src="../js/lottie/loading.js"></script>
-        <script defer src="../js/bycrpt/bycrpt.js"></script>
         <script defer src="../js/lottie/button-click.js"></script>
-        <script defer src="../js/component/util.js"></script>
+        <script defer src="../js/bycrpt/bycrpt.js"></script>
+        <script defer src="../js/util/regex.js"></script>
+        <script defer src="../js/util/util.js"></script>
         <script defer src="../js/component/account.js"></script>
         <script defer src="../js/component/user.js"></script>
         <script defer src="../js/signup.js"></script>
