--- a/html/characterprofile.html
+++ b/html/characterprofile.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="../css/normalize.css" rel="stylesheet">
+    <link href="../css/characterprofile.css" rel="stylesheet">
 </head>
+
 
 <body>   
     <!-----Character Profile Structure------>
