--- a/html/signup.html
+++ b/html/signup.html
@@ -139,8 +139,8 @@
         <script defer src="../js/bycrpt/bycrpt.js"></script>
         <script defer src="../js/util/regex.js"></script>
         <script defer src="../js/util/util.js"></script>
-        <script defer src="../js/component/account.js"></script>
-        <script defer src="../js/component/user.js"></script>
+        <script defer src="../js/repo/account.js"></script>
+        <script defer src="../js/repo/user.js"></script>
         <script defer src="../js/signup.js"></script>
     </body>
 </html>
