--- a/html/mainpage.html
+++ b/html/mainpage.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="../css/normalize.css" rel="stylesheet">
     <link href="../css/mainpage.css" rel="stylesheet">
 </head>
 <body>
@@ -16,6 +15,7 @@
         <div class="hamburger-menu-btn">
             <div class="hamburger-menu"></div>
         </div>
+        <link href="../css/util/normalize.css" rel="stylesheet">
 
         <div class="logo-img">
             <img src="../asset/img/mikasa.png" alt="placeholder" style="width:128px;height:128px;">
