--- a/html/signup.html
+++ b/html/signup.html
@@ -22,7 +22,7 @@
               rel="stylesheet">
 
         <!-- Main CSS -->
-        <link href="../css/normalize.css" rel="stylesheet" type="text/css">
+        <link href="../css/util/normalize.css" rel="stylesheet" type="text/css">
         <link href="../css/lottie/loading.css" rel="stylesheet" type="text/css">
         <link href="../css/signup.css" rel="stylesheet" type="text/css">
     </head>
