--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta content="ID ASG II" name="description">
         <meta content="width=device-width, initial-scale=1" name="viewport">
 
-        <link href="css/normalize.css" rel="stylesheet">
+        <link href="css/util/normalize.css" rel="stylesheet">
         <link href="css/lottie/loading.css" rel="stylesheet">
     </head>
 
