--- a/html/summon.html
+++ b/html/summon.html
@@ -2,33 +2,49 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>CodePen - bootstrap 4 navbar</title>
+        <title>Summon</title>
+
         <meta charset="UTF-8">
+        <meta content="ID ASG II" name="description">
         <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
               name="viewport">
+
+        <!-- Google Font API -->
+        <link href="https://fonts.googleapis.com" rel="preconnect">
+        <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;700&display=swap" rel="stylesheet">
+        <!-- Semantic UI API -->
+        <link href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+              rel="stylesheet"
+              type="text/css">
+        <!-- Bootstrap API -->
         <link crossorigin="anonymous"
               href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
               integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
               rel="stylesheet">
-        <link rel="stylesheet"
+        <!-- Front Awesome -->
+        <link crossorigin="anonymous"
               href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
               integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
-              crossorigin="anonymous" />
-        <link href="../css/util/navbar.css" rel="stylesheet">
+              rel="stylesheet" />
 
+        <!-- Main CSS -->
+        <link href="../css/util/normalize.css" rel="stylesheet" type="text/css">
+        <link href="../css/lottie/loading.css" rel="stylesheet" type="text/css">
+        <link href="../css/util/navbar.css" rel="stylesheet">
     </head>
+
     <body>
-        <!-- partial:index.partial.html -->
-        <nav class="navbar navbar-expand-custom navbar-mainbg">
-            <a class="navbar-brand navbar-logo" href="#">Navbar</a>
-            <button aria-controls="navbarSupportedContent"
+        <nav class="navbar-expand-custom navbar-mainbg" id="navbar">
+            <a class="navbar-brand navbar-logo" href="#">Cyte</a>
+            <button aria-controls="navbar-content"
                     aria-expanded="false"
-                    aria-label="Toggle navigation"
+                    aria-label="toggle navigation"
                     class="navbar-toggler"
                     type="button">
                 <i class="fas fa-bars text-white"></i>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbar-content">
                 <ul class="navbar-nav ml-auto">
                     <div class="hori-selector">
                         <div class="left"></div>
@@ -56,7 +72,8 @@
                 </ul>
             </div>
         </nav>
-        <!-- partial -->
+
+        <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
         <script crossorigin="anonymous"
                 defer
                 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -69,7 +86,8 @@
                 defer
                 integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+        <script defer src="../js/lottie/loading.js"></script>
         <script defer src="../js/util/navbar.js"></script>
-
     </body>
 </html>
