add meta header

--- a/html/signup.html
+++ b/html/signup.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8">
         <title>SignUp</title>
 
+        <meta charset="UTF-8">
         <meta content="ID ASG II" name="description">
-        <meta content="width=device-width, initial-scale=1" name="viewport">
+        <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+              name="viewport">
 
         <!-- Google Font API -->
         <link href="https://fonts.googleapis.com" rel="preconnect">
