--- a/html/summon.html
+++ b/html/summon.html
@@ -35,6 +35,13 @@
     </head>
 
     <body>
+        <lottie-player autoplay
+                       id="lp-loading"
+                       loop
+                       mode="bounce"
+                       speed="0.75"
+                       src="../asset/lottie/loading-morandi-50.json"></lottie-player>
+
         <nav class="navbar-expand-custom navbar-mainbg" id="navbar">
             <a class="navbar-brand navbar-logo" href="#">Cyte</a>
             <button aria-controls="navbar-content"
@@ -50,24 +57,38 @@
                         <div class="left"></div>
                         <div class="right"></div>
                     </div>
+                    <!--                    <li class="nav-item">-->
+                    <!--                        <a class="nav-link" href="javascript:void 0;"><i class="fas fa-tachometer-alt"></i>Dashboard</a>-->
+                    <!--                    </li>-->
+                    <!--                    <li class="nav-item active">-->
+                    <!--                        <a class="nav-link" href="javascript:void 0;"><i class="far fa-address-book"></i>Address-->
+                    <!--                                                                                                         Book</a>-->
+                    <!--                    </li>-->
+                    <!--                    <li class="nav-item">-->
+                    <!--                        <a class="nav-link" href="javascript:void 0;"><i class="far fa-clone"></i>Components</a>-->
+                    <!--                    </li>-->
+                    <!--                    <li class="nav-item">-->
+                    <!--                        <a class="nav-link" href="javascript:void 0;"><i class="far fa-calendar-alt"></i>Calendar</a>-->
+                    <!--                    </li>-->
+                    <!--                    <li class="nav-item">-->
+                    <!--                        <a class="nav-link" href="javascript:void 0;"><i class="far fa-chart-bar"></i>Charts</a>-->
+                    <!--                    </li>-->
+                    <!--                    <li class="nav-item">-->
+                    <!--                        <a class="nav-link" href="javascript:void 0;"><i class="far fa-copy"></i>Documents</a>-->
+                    <!--                    </li>-->
+
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void 0;"><i class="fas fa-tachometer-alt"></i>Dashboard</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="javascript:void 0;"><i class="far fa-address-book"></i>Address
-                                                                                                         Book</a>
+                        <a class="nav-link" href="mainpage.html"><i class="fas fa-home"></i>Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void 0;"><i class="far fa-clone"></i>Components</a>
+                        <a class="nav-link" href="summon.html"><i class="fas fa-users"></i>Summon</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void 0;"><i class="far fa-calendar-alt"></i>Calendar</a>
+                        <a class="nav-link"
+                           href="characterprofile.html"><i class="far fa-address-book"></i>Character</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="javascript:void 0;"><i class="far fa-chart-bar"></i>Charts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="javascript:void 0;"><i class="far fa-copy"></i>Documents</a>
+                    <li class="nav-item" id="navbar-content-profile">
+                        <a class="nav-link" href="login.html"><i class="far fa-user"></i>Log In</a>
                     </li>
                 </ul>
             </div>
@@ -88,6 +109,10 @@
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
         <script defer src="../js/lottie/loading.js"></script>
+        <script defer src="../js/repo/account.js"></script>
+        <script defer src="../js/repo/user.js"></script>
+        <script defer src="../js/util/util.js"></script>
         <script defer src="../js/util/navbar.js"></script>
+        <script defer src="../js/summon.js"></script>
     </body>
 </html>
