--- a/html/characterprofile.html
+++ b/html/characterprofile.html
@@ -7,26 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../css/normalize.css" rel="stylesheet">
     <link href="../css/characterprofile.css" rel="stylesheet">
+    <script src="../js/component/aot.js" defer></script>
+    <script src="../js/characterprofile.js" defer></script>
 </head>
 
 
 <body>   
     <!-----Character Profile Structure------>
+    <div>
+        <img class="logo-img" src="../asset/img/mikasa.png" alt="placeholder" style="width:600px;">
+    </div>
+
     <div class="model"></div>
     <div class="stat">
-        <div class="heading"><strong>Armoured Titan</strong></div>
-        <div class="info"><strong>Pull Rate:</strong> 0.21</div>
-        <div class="info"><strong>Tier:</strong> SSR</div>
+        <div class="heading"><strong>Name</strong></div>
+        <div class="info"><strong>Rating:</strong> <span class="rating-info">99999999999</span></div>
+        <div class="info"><strong>Height:</strong> <span class="height-info">99999999999</span>m</div>
         <br />
-        <div class="info"><strong>Weight:</strong> 600.5kg</div>
-        <div class="info"><strong>Height:</strong> 3.5m</div>
+        <div class="info"><strong>Inheritors:</strong> <span class="inheritors-info">inheritornames</span></div>
+        <div class="info"><strong>Abilities:</strong> <span class="abilities-info">abilities</span></div>
         <br />
-        <div class="info"><strong>Type:</strong> Titan</div>
+        <div class="info"><strong>Type:</strong></div>
         <div class="subheading">Le Titan</div>
-        <p>The Armored Titan specializes in hardening. If it charges in at full speed, the gates of any wall will crumble.</p>
+        <p>Description.</p>
     </div>
 </body>
 
-
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </html>
