--- a/html/summon.html
+++ b/html/summon.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <title>Summon</title>
 
-        <meta charset="UTF-8">
         <meta content="ID ASG II" name="description">
         <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
               name="viewport">
@@ -62,7 +61,7 @@
                         <div class="right"></div>
                     </div>
                     <li class="nav-item">
-                        <a class="nav-link" href="mainpage.html"><i class="fas fa-home"></i>Home</a>
+                        <a class="nav-link" href="../index.html"><i class="fas fa-home"></i>Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="summon.html"><i class="fas fa-users"></i>Summon</a>
