Added button functionality to summon HTML CSS JS

--- a/html/mainpage.html
+++ b/html/mainpage.html
@@ -38,7 +38,7 @@
         
         <div class="hamburger-menu-wrapper">
             <ul class="hamburger-menu-list">
-                <li class="hamburger-menu-element"><a href="#" class="hamburger-menu-link">Characters</a></li>
+                <li class="hamburger-menu-element"><a href="#" class="hamburger-menu-link">Characters</a><img src="../asset/img/outline_groups_white_24dp.png" alt="group sign"></li>
                 <li class="hamburger-menu-element"><a href="#" class="hamburger-menu-link">Profile</a></li>
                 <li class="hamburger-menu-element"><a href="#" class="hamburger-menu-link">Top Up</a></li>
             </ul>
