--- a/html/summon.html
+++ b/html/summon.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <title>Summon</title>
 
-        <meta charset="UTF-8">
         <meta content="ID ASG II" name="description">
         <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
               name="viewport">
@@ -13,6 +12,7 @@
         <link href="https://fonts.googleapis.com" rel="preconnect">
         <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
         <!-- Semantic UI API -->
         <link href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
               rel="stylesheet"
@@ -79,11 +79,22 @@
         </nav>
 
         <!-- Main -->
+
         <section id="card-summon-container-section">
             <div class="card-slider" id="card-summon-container">
                 <div class="blog-slider__wrp swiper-wrapper" id="card-summon-items"></div>
                 <div class="card-slider-pagination"></div>
             </div>
+        </section>
+        
+        <section id="main-summon-container-section">
+            <div class="left btn-summon-ctn" id="btn-summon-one">
+                <span><a class="left" href="#"></a></span>
+            </div>
+            <div class="right btn-summon-ctn" id="btn-summon-multi">
+                <span><a class="right" href="#"></a></span>
+            </div>
+            
         </section>
         <!-- End Main -->
 
