--- a/html/topup.html
+++ b/html/topup.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Home</title>
+        <title>TopUp</title>
 
         <meta content="ID ASG II" name="description">
         <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com" rel="preconnect">
         <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
         <!-- Semantic UI API -->
         <link href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
               rel="stylesheet"
@@ -30,16 +31,12 @@
         <link href="https://unpkg.com/swiper@8/swiper-bundle.min.css" rel="stylesheet" />
 
         <!-- Main CSS -->
-        <link href="css/util/normalize.css" rel="stylesheet">
-        <link href="css/lottie/loading.css" rel="stylesheet">
-        <link href="css/util/navbar.css" rel="stylesheet" type="text/css">
-        <link href="css/util/grid.css" rel="stylesheet" type="text/css">
-        <link href="css/util/meteor.css" rel="stylesheet" type="text/css">
-        <link href="css/index.css" rel="stylesheet" type="text/css">
+        <link href="../css/util/normalize.css" rel="stylesheet" type="text/css">
+        <link href="../css/lottie/loading.css" rel="stylesheet" type="text/css">
+        <link href="../css/util/navbar.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
-        <canvas id="canvas-background"></canvas>
         <lottie-player autoplay
                        id="lp-loading"
                        loop
@@ -63,26 +60,26 @@
                         <div class="right"></div>
                     </div>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"><i class="fas fa-home"></i>Home</a>
+                        <a class="nav-link" href="../index.html"><i class="fas fa-home"></i>Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/summon.html"><i class="fas fa-users"></i>Summon</a>
+                        <a class="nav-link" href="summon.html"><i class="fas fa-users"></i>Summon</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/characterprofile.html"><i class="far fa-address-book"></i>Character</a>
+                        <a class="nav-link"
+                           href="characterprofile.html"><i class="far fa-address-book"></i>Character</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/topup.html"><i class="fas fa-tachometer-alt"></i>TopUp</a>
+                        <a class="nav-link" href="topup.html"><i class="fas fa-tachometer-alt"></i>TopUp</a>
                     </li>
                     <li class="nav-item" id="navbar-content-profile">
-                        <a class="nav-link" href="html/login.html"><i class="far fa-user"></i>Log In</a>
+                        <a class="nav-link" href="login.html"><i class="far fa-user"></i>Log In</a>
                     </li>
                 </ul>
             </div>
         </nav>
 
         <!-- Main -->
-        <div class="grid" id="grid-character"></div>
         <!-- End Main -->
 
         <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -100,12 +97,7 @@
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
         <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-        <script defer src="js/lottie/loading.js"></script>
-        <script defer src="js/util/navbar.js"></script>
-        <script defer src="js/util/util.js"></script>
-        <script defer src="js/util/proxy.js"></script>
-        <script defer src="js/repo/aot/character.js"></script>
-        <script defer src="js/util/meteor.js"></script>
-        <script defer src="js/index.js"></script>
+        <script defer src="../js/lottie/loading.js"></script>
+        <script defer src="../js/util/navbar.js"></script>
     </body>
 </html>
