--- a/html/topup.html
+++ b/html/topup.html
@@ -34,6 +34,9 @@
         <link href="../css/util/normalize.css" rel="stylesheet" type="text/css">
         <link href="../css/lottie/loading.css" rel="stylesheet" type="text/css">
         <link href="../css/util/navbar.css" rel="stylesheet" type="text/css">
+        <link href="../css/range-slider.css" rel="stylesheet" type="text/css">
+        <link href="../css/button/cute.css" rel="stylesheet" type="text/css">
+        <link href="../css/topup.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
@@ -80,6 +83,22 @@
         </nav>
 
         <!-- Main -->
+        <section id="range-slider-holder">
+            <div class="range-slider">
+                <h1 class="range-slider-title">Top Up</h1>
+                <p class="range-slider-subtitle" id="range-slider-hint">Please give me your angbao money :)</p>
+                <p class="range-slider-value">SGD 500</p>
+                <div class="range-slider-slider">
+                    <div id="btn-amt-holder">
+                        <button class="btn-cute cute" value="100">SGD 100</button>
+                        <button class="btn-cute cute" value="1000">SGD 1,000</button>
+                        <button class="btn-cute cute" value="10000">SGD 10,000</button>
+                    </div>
+                    <label for="range-slider"></label>
+                    <input class="slider" id="range-slider" max="10000" min="100" type="range" value="500" />
+                </div>
+            </div>
+        </section>
         <!-- End Main -->
 
         <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -99,5 +118,6 @@
         <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
         <script defer src="../js/lottie/loading.js"></script>
         <script defer src="../js/util/navbar.js"></script>
+        <script defer src="../js/range-slider.js"></script>
     </body>
 </html>
