--- a/html/topup.html
+++ b/html/topup.html
@@ -34,7 +34,7 @@
         <link href="../css/util/normalize.css" rel="stylesheet" type="text/css">
         <link href="../css/lottie/loading.css" rel="stylesheet" type="text/css">
         <link href="../css/util/navbar.css" rel="stylesheet" type="text/css">
-        <link href="../css/range-slider.css" rel="stylesheet" type="text/css">
+        <link href="../css/util/range-slider.css" rel="stylesheet" type="text/css">
         <link href="../css/button/cute.css" rel="stylesheet" type="text/css">
         <link href="../css/topup.css" rel="stylesheet" type="text/css">
     </head>
@@ -118,6 +118,6 @@
         <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
         <script defer src="../js/lottie/loading.js"></script>
         <script defer src="../js/util/navbar.js"></script>
-        <script defer src="../js/range-slider.js"></script>
+        <script defer src="../js/util/range-slider.js"></script>
     </body>
 </html>
