Add submit button (topup).

--- a/html/topup.html
+++ b/html/topup.html
@@ -45,7 +45,7 @@
                        loop
                        mode="bounce"
                        speed="0.75"
-                       src="../asset/lottie/loading-morandi-50.json"></lottie-player>
+                       src="../asset/lottie/payment.json"></lottie-player>
 
         <nav class="navbar-expand-custom navbar-mainbg" id="navbar">
             <a class="navbar-brand navbar-logo" href="#">Cyte</a>
@@ -97,6 +97,7 @@
                     <label for="range-slider"></label>
                     <input class="slider" id="range-slider" max="10000" min="100" type="range" value="500" />
                 </div>
+                <button class="btn-cute cute green" id="btn-pay">Meow!</button>
             </div>
         </section>
         <!-- End Main -->
@@ -119,5 +120,6 @@
         <script defer src="../js/lottie/loading.js"></script>
         <script defer src="../js/util/navbar.js"></script>
         <script defer src="../js/util/range-slider.js"></script>
+        <script defer src="../js/topup.js"></script>
     </body>
 </html>
