--- a/html/topup.html
+++ b/html/topup.html
@@ -118,6 +118,9 @@
         <script defer src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
         <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
         <script defer src="../js/lottie/loading.js"></script>
+        <script defer src="../js/util/util.js"></script>
+        <script defer src="../js/repo/account.js"></script>
+        <script defer src="../js/repo/user.js"></script>
         <script defer src="../js/util/navbar.js"></script>
         <script defer src="../js/util/range-slider.js"></script>
         <script defer src="../js/topup.js"></script>
