--- a/html/summon.html
+++ b/html/summon.html
@@ -11,7 +11,6 @@
         <!-- Google Font API -->
         <link href="https://fonts.googleapis.com" rel="preconnect">
         <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
         <!-- Semantic UI API -->
         <link href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
@@ -86,16 +85,54 @@
                 <div class="card-slider-pagination"></div>
             </div>
         </section>
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="../asset/img/7a5e72e46eef38079c9a0494d34b41bb.jpg" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>HELLO</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum vitae explicabo aliquid officia libero dignissimos perferendis! Sint qui sunt earum iste nihil modi maiores voluptatibus ducimus dolor. Illum, nemo!</p>
+                    <!-- <div class="summon-btns">
+                        <div class="left btn-summon-ctn" id="btn-summon-one">
+                            <span><a class="left" href="#"></a></span>
+                        </div>
+                        <div class="right btn-summon-ctn" id="btn-summon-multi">
+                            <span><a class="right" href="#"></a></span>
+                        </div>
+                    </div> -->
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>...</h5>
+                    <p>...</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>...</h5>
+                    <p>...</p>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         
-        <section id="main-summon-container-section">
-            <div class="left btn-summon-ctn" id="btn-summon-one">
-                <span><a class="left" href="#"></a></span>
-            </div>
-            <div class="right btn-summon-ctn" id="btn-summon-multi">
-                <span><a class="right" href="#"></a></span>
-            </div>
-            
-        </section>
         <!-- End Main -->
 
         <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
