Add search box for at the index HTML JS CSS.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
         </nav>
 
         <!-- Main -->
+        <div id="ph-search">
+            <div class="form">
+                <input autocomplete="off" id="tb-character" name="name" required type="text" />
+                <label class="label-name" for="tb-character">
+                    <span class="content-name">Character</span>
+                </label>
+            </div>
+        </div>
         <div class="grid" id="grid-character"></div>
         <!-- End Main -->
 
