--- a/html/login.html
+++ b/html/login.html
@@ -88,6 +88,7 @@
         <script defer src="../js/bycrpt/bycrpt.js"></script>
         <script defer src="../js/lottie/button-click.js"></script>
         <script defer src="../js/util/regex.js"></script>
+        <script defer src="../js/repo/user.js"></script>
         <script defer src="../js/repo/account.js"></script>
         <script defer src="../js/login.js"></script>
     </body>
