Add background image.

--- a/html/topup.html
+++ b/html/topup.html
@@ -11,7 +11,8 @@
         <!-- Google Font API -->
         <link href="https://fonts.googleapis.com" rel="preconnect">
         <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap"
+              rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
         <!-- Semantic UI API -->
         <link href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
@@ -81,6 +82,8 @@
                 </ul>
             </div>
         </nav>
+
+        <img alt="" id="background-image" src="https://images8.alphacoders.com/654/thumb-1920-654111.jpg">
 
         <!-- Main -->
         <section id="range-slider-holder">
