--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         <script defer src="js/util/navbar.js"></script>
         <script defer src="js/util/util.js"></script>
         <script defer src="js/util/proxy.js"></script>
+        <script defer src="js/repo/account.js"></script>
         <script defer src="js/repo/aot/character.js"></script>
         <script defer src="js/util/meteor.js"></script>
         <script defer src="js/index.js"></script>
