Added responsiveness till 768px n top up btn

--- a/html/summon.html
+++ b/html/summon.html
@@ -88,7 +88,19 @@
                 <div class="card-slider-pagination"></div>
             </div>
         </section>
-
+        <div class="balance-display">
+            <div class="balance-icon">
+                <img src="../asset/img/pngaaa.com-1559466.png" alt="ethereum logo">
+            </div>
+            <div class="balance-text">
+                <h2>Balance</h2>
+            </div>
+            <div class="top-up-icon">
+                <a href="topup.html">
+                    <img src="../asset/img/outline_add_circle_outline_white_24dp.png" alt="plus sign">
+                </a>
+            </div>
+        </div>
         <div class="img-slider" id="main-summon-container-section">
             <div class="slide active">
                 <img src="../asset/img/bg-1.jpg" alt="">
