--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     </head>
 
     <body>
+        <img alt="" id="background-image" src="https://images8.alphacoders.com/654/thumb-1920-654111.jpg">
         <canvas id="canvas-background"></canvas>
         <lottie-player autoplay
                        id="lp-loading"
