Add statistics to navbar.

--- a/html/topup.html
+++ b/html/topup.html
@@ -74,6 +74,9 @@
                            href="characterprofile.html"><i class="far fa-address-book"></i>Character</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="statistics.html"><i class="far fa-chart-bar"></i>Statistics</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="topup.html"><i class="fas fa-tachometer-alt"></i>TopUp</a>
                     </li>
                     <li class="nav-item" id="navbar-content-profile">
