Added user balance to summon html js

--- a/html/summon.html
+++ b/html/summon.html
@@ -93,7 +93,7 @@
                 <img src="../asset/img/pngaaa.com-1559466.png" alt="ethereum logo">
             </div>
             <div class="balance-text">
-                <h2>Balance</h2>
+                <h2 id="txt-balance"></h2>
             </div>
             <div class="top-up-icon">
                 <a href="topup.html">
