--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                        src="../asset/lottie/loading-morandi-50.json"></lottie-player>
 
         <nav class="navbar-expand-custom navbar-mainbg" id="navbar">
-            <a class="navbar-brand navbar-logo" href="#">Cyte</a>
+            <a class="navbar-brand navbar-logo" href="#"><img src="../asset/img/Asset 52.png" alt="game logo" style="max-width: 60px; max-height: 100px;"></a>
             <button aria-controls="navbar-content"
                     aria-expanded="false"
                     aria-label="toggle navigation"
