Add character profile in statistics page.

--- a/html/statistics.html
+++ b/html/statistics.html
@@ -87,6 +87,35 @@
         <img alt="" id="background-image" src="https://images8.alphacoders.com/654/thumb-1920-654111.jpg">
 
         <!-- Main -->
+        <div class="profile-card">
+            <div class="infos">
+                <div class="img-border">
+                    <img alt="" id="character-image" src="">
+                </div>
+                <h1 class="name" id="character-name"></h1>
+                <h3 class="specialty" id="character-species"></h3>
+                <a href="#" id="character-wiki" target="_">
+                    <button class="contact-me-btn">Wiki</button>
+                </a>
+            </div>
+
+            <div class="stats">
+                <div class="stat">
+                    <span class="stat-num" id="character-age">X</span>
+                    <span class="stat-name">AGE</span>
+                </div>
+
+                <div class="stat">
+                    <span class="stat-num" id="character-rating">X</span>
+                    <span class="stat-name">RATING</span>
+                </div>
+
+                <div class="stat">
+                    <span class="stat-num" id="character-favourite">X</span>
+                    <span class="stat-name">FAVOURITE</span>
+                </div>
+            </div>
+        </div>
         <!-- End Main -->
 
         <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -106,8 +135,10 @@
         <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
         <script defer src="../js/lottie/loading.js"></script>
         <script defer src="../js/util/util.js"></script>
+        <script defer src="../js/util/proxy.js"></script>
         <script defer src="../js/repo/account.js"></script>
         <script defer src="../js/repo/user.js"></script>
+        <script defer src="../js/repo/aot/character.js"></script>
         <script defer src="../js/util/navbar.js"></script>
         <script defer src="../js/statistics.js"></script>
     </body>
