Changed bg for 5 pages HTML CSS

--- a/html/characterprofile.html
+++ b/html/characterprofile.html
@@ -8,12 +8,15 @@
     <link href="../css/characterprofile.css" rel="stylesheet">
     <script src="../js/component/aot.js" defer></script>
     <script src="../js/characterprofile.js" defer></script>
+    <script defer src="../js/util/meteor.js"></script>
 </head>
         <link href="../css/util/normalize.css" rel="stylesheet">
+        <link href="../css/util/meteor.css" rel="stylesheet" type="text/css">
 
 
 <body>   
     <!-----Character Profile Structure------>
+    <canvas id="canvas-background"></canvas>
     <div>
         <img class="logo-img" src="../asset/img/mikasa.png" alt="placeholder" style="width:600px;">
     </div>
