--- a/html/summon.html
+++ b/html/summon.html
@@ -34,10 +34,12 @@
         <link href="../css/util/card.css" rel="stylesheet" type="text/css">
         <link href="../css/lottie/loading.css" rel="stylesheet" type="text/css">
         <link href="../css/util/navbar.css" rel="stylesheet" type="text/css">
+        <link href="../css/util/meteor.css" rel="stylesheet" type="text/css">
         <link href="../css/summon.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
+        <canvas id="canvas-background"></canvas>
         <lottie-player autoplay
                        id="lp-loading"
                        loop
@@ -167,5 +169,6 @@
         <script defer src="../js/util/util.js"></script>
         <script defer src="../js/util/navbar.js"></script>
         <script defer src="../js/summon.js"></script>
+        <script defer src="../js/util/meteor.js"></script>
     </body>
 </html>
