--- a/html/signup.html
+++ b/html/signup.html
@@ -26,6 +26,8 @@
         <link href="../css/util/normalize.css" rel="stylesheet" type="text/css">
         <link href="../css/lottie/loading.css" rel="stylesheet" type="text/css">
         <link href="../css/signup.css" rel="stylesheet" type="text/css">
+        <link href="../css/util/meteor.css" rel="stylesheet" type="text/css">
+        
     </head>
 
     <body>
@@ -35,7 +37,8 @@
                        mode="bounce"
                        speed="0.75"
                        src="../asset/lottie/loading-morandi-50.json"></lottie-player>
-        <img alt="background-image" id="img-background" src="../asset/img/b-1.jpg" />
+        <img alt="" id="background-image" src="https://images8.alphacoders.com/654/thumb-1920-654111.jpg">
+        <canvas id="canvas-background"></canvas>
 
         <!-- Here -->
         <div class="wrap-center-vertical" id="d-signup">
@@ -142,6 +145,7 @@
         <script defer src="../js/util/util.js"></script>
         <script defer src="../js/repo/account.js"></script>
         <script defer src="../js/repo/user.js"></script>
+        <script defer src="../js/util/meteor.js"></script>
         <script defer src="../js/signup.js"></script>
     </body>
 </html>
