--- a/html/topup.html
+++ b/html/topup.html
@@ -38,6 +38,7 @@
         <link href="../css/util/range-slider.css" rel="stylesheet" type="text/css">
         <link href="../css/button/cute.css" rel="stylesheet" type="text/css">
         <link href="../css/topup.css" rel="stylesheet" type="text/css">
+        <link href="../css/util/meteor.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
@@ -87,7 +88,7 @@
         </nav>
 
         <img alt="" id="background-image" src="https://images8.alphacoders.com/654/thumb-1920-654111.jpg">
-
+        <canvas id="canvas-background"></canvas>
         <!-- Main -->
         <section id="range-slider-holder">
             <div class="range-slider">
@@ -130,5 +131,6 @@
         <script defer src="../js/util/navbar.js"></script>
         <script defer src="../js/util/range-slider.js"></script>
         <script defer src="../js/topup.js"></script>
+        <script defer src="../js/util/meteor.js"></script>
     </body>
 </html>
