--- a/html/characterprofile.html
+++ b/html/characterprofile.html
@@ -18,6 +18,15 @@
         <img class="logo-img" src="../asset/img/mikasa.png" alt="placeholder" style="width:600px;">
     </div>
 
+    <div class="back-button">
+        <a href="summon.html">
+            <button style="background-color:Black;color:Green;border-radius: 5px;bottom:430px;right:550px;display:flex">Go Back</button>
+        </a>
+    </div>
+
+
+    
+
     <div class="model"></div>
     <div class="stat">
         <div class="heading"><strong>Name</strong></div>
@@ -35,3 +44,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </html>
+
+
+
+
