Updated summon HTML JS

--- a/html/summon.html
+++ b/html/summon.html
@@ -93,7 +93,7 @@
                 <div class="card-slider-pagination"></div>
             </div>
         </section>
-        <div class="balance-display">
+        <div class="balance-display" id="balance-display">
             <div class="balance-icon">
                 <img src="../asset/img/pngaaa.com-1559466.png" alt="ethereum logo">
             </div>
